k8s/ingress.yaml
# https://github.com/kubernetes/ingress-gce/blob/master/docs/annotations.md
apiVersion: networking.k8s.io/v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: $SERVICE_NAME-ingress
    annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers "namespace: $NAMESPACE";
  spec:
    tls:
    - hosts:
      - $HOSTNAME
      secretName: $CERT_NAME
    rules:
    - host: $HOSTNAME
      http:
        paths:
        - backend:
            serviceName: $SERVICE_NAME
            servicePort: 80
          path: /
